fix: cart note alignment

--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -87,6 +87,7 @@ cart-items {
 
 .cart__note {
   height: fit-content;
+  margin-block-start: 3rem;
 }
 
 .cart__note label {
